--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "2": "^3.0.0",
+    "@faker-js/faker": "^8.3.1",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
@@ -19,7 +20,7 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.17.3",
-    "mongoose": "^7.6.6",
+    "mongoose": "^7.6.7",
     "mongoose-paginate-v2": "^1.7.4",
     "nanoid": "^4.0.2",
     "nodemailer": "^6.9.7",
@@ -31,6 +32,6 @@
     "socket.io": "^4.7.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.2"
   }
 }
